# P241_KK_SimpleMergeReturnPass

./: README.md
presentation/: .gitignore
presentation/src/: generate_presentation.sh  generate_presentation_english.sh  generate_presentation_serbian.sh  slides.tex
src/: CMakeLists.txt  SimpleMergeReturn.cpp
tests/multiple_returns/: multiple_returns.c  multiple_returns.ll  multiple_returns_optimized.ll
tests/multiple_returns_void/: multiple_returns_void.c  multiple_returns_void.ll  multiple_returns_void_optimized.ll
tests/unreachable/: unreachable.cpp  unreachable.ll  unreachable_optimized.ll
